file(GLOB_RECURSE SOURCE_FILES *.cpp)
file(GLOB_RECURSE HEADER_FILES *.h)

add_library(ClientLib ${SOURCE_FILES} ${HEADER_FILES})
if (MSVC)
    target_compile_options(ClientLib PRIVATE /W4 /WX)
else ()
    target_compile_options(ClientLib PRIVATE -Wall -Wextra -pedantic -Wshadow -Wdouble-promotion -Wundef -Werror)
endif ()

set(platform_dependent_libs "")
if (WIN32)
    if (MSVC)
        list(APPEND platform_dependent_libs "ws2_32")
    else ()
        list(APPEND platform_dependent_libs "-lws2_32")
    endif ()
endif ()
target_link_libraries(ClientLib PUBLIC Common spdlog SDL2::SDL2 ${platform_dependent_libs})
target_include_directories(ClientLib PUBLIC ${CMAKE_CURRENT_LIST_DIR})
